# qpid-cms

./: .gitmodules  CMakeLists.txt  INSTALL  NOTES  README.md  TODO.md  cms
examples/: CMakeLists.txt  SimpleAsyncConsumer.cpp  SimpleProducer.cpp
qpidmessaging/: QpidBytesMessage.cpp  QpidBytesMessage.h  QpidConnection.cpp  QpidConnection.h  QpidConnectionFactory.cpp  QpidConnectionFactory.h  QpidDestination.cpp  QpidDestination.h  QpidExceptions.cpp  QpidExceptions.h  QpidMapMessage.cpp  QpidMapMessage.h  QpidMessage.cpp  QpidMessage.h  QpidMessageBase.h  QpidMessageConsumer.cpp  QpidMessageConsumer.h  QpidMessageProducer.cpp  QpidMessageProducer.h  QpidProps.cpp  QpidProps.h  QpidQueue.cpp  QpidQueue.h  QpidQueueBrowser.cpp  QpidQueueBrowser.h  QpidSession.cpp  QpidSession.h  QpidStreamMessage.cpp  QpidStreamMessage.h  QpidTempQueue.cpp  QpidTempQueue.h  QpidTempTopic.cpp  QpidTempTopic.h  QpidTextMessage.cpp  QpidTextMessage.h  QpidTopic.cpp  QpidTopic.h
tests/: CMakeLists.txt  MessageTests.cpp
